--- a/BurgerMaker/BurgerMaker.csproj
+++ b/BurgerMaker/BurgerMaker.csproj
@@ -59,6 +59,9 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -155,6 +158,11 @@
     <Compile Include="Helpers\PasswordAttribute.cs" />
     <Compile Include="Helpers\LoginUserSession.cs" />
     <Compile Include="Interfaces\IHamburgerViewModelBuilder.cs" />
+    <Compile Include="Loggers\ILoggerAdapter.cs" />
+    <Compile Include="Loggers\InvalidLoggerAdapterException.cs" />
+    <Compile Include="Loggers\JSONFileAdapter.cs" />
+    <Compile Include="Loggers\LoggerFactory.cs" />
+    <Compile Include="Loggers\TextFileAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\GetABurgerViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
